# srv-rebalanceamento/src/controllers/Conta.js
@@ -3,13 +3,13 @@
 var utils = require('../utils/writer.js');
 var Conta = require('../service/ContaService');
 
-module.exports.contaGET = function contaGET (req, res, next, moeda) {
-  Conta.contaGET(moeda)
+module.exports.contaGET = function contaGET (req, res, next, moeda, conta) {
+  Conta.contaGET(moeda, conta)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.handleError(res, response);
     });
 };
 
@@ -19,7 +19,7 @@ module.exports.contaIdDELETE = function contaIdDELETE (req, res, next, contaId) 
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.handleError(res, response);
     });
 };
 
@@ -29,7 +29,7 @@ module.exports.contaIdGET = function contaIdGET (req, res, next, contaId) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.handleError(res, response);
     });
 };
 
@@ -39,7 +39,7 @@ module.exports.contaPOST = function contaPOST (req, res, next, body) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.handleError(res, response);
     });
 };
 
@@ -49,6 +49,16 @@ module.exports.contaPUT = function contaPUT (req, res, next) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.handleError(res, response);
     });
 };
+
+module.exports.contasSaldoTotalGET = function contasSaldoTotalGET(req, res, next) {
+  Conta.contasSaldoTotalGET()
+   .then(function (response) {
+      utils.writeJson(res, response);
+    })
+   .catch(function (response) {
+      utils.handleError(res, response);
+    });
+}
